# utils

./: .gitignore  README.md  cat_dir.sh  compress_video.sh  frames.sh  genDir.js  install.sh  prepare_video.sh  size.sh  speed.sh  ssh.sh  treecat  treecat.rs
fosum/: Cargo.toml  README.md
fosum-js/: README.md  fosum-0.1.0.tgz  fosum-0.3.0.tgz  package.json
fosum-py/: README.md  setup.py
fosum-py/fosum/: __init__.py
fosum-rs/: Cargo.toml  README.md
fosum/src/: main.rs
